Fix issue with Thickbox content overflowing improperly
Fixes #547

--- a/assets/css/scss/admin-post-edit.scss
+++ b/assets/css/scss/admin-post-edit.scss
@@ -16,6 +16,11 @@
 	display: none;
 }
 
+// Add some space at bottom of lightbox in Firefox
+#select_gravityview_view_form {
+	margin-bottom: 25px;
+}
+
 #select_gravityview_view_form table {
 
 	margin-top: 20px;
